# mini-apigw

./: README.md  pyproject.toml
docs/: .gitignore
gateway/: accounting.py  app.py  auth.py  cli.py  config.py  ipacl.py  log.py  main.py  policies.py  responses.py  routing.py  runtime.py  scheduling.py  signals.py  sse.py  trace.py
gateway/api/: __init__.py  admin.py  v1.py
gateway/backends/: __init__.py  anthropic.py  base.py  google.py  mistral.py  ollama.py  openai.py
gateway/middleware/: decompression.py  trace.py
sql/: schema.sql
startup_script/freebsd/rc.d/: mini_apigw
tests/: example_async_chat_client.py  example_chat_client.py  example_chat_responses_client.py  example_complete.py  example_describe_image.py  example_embeddings.py  example_image_generate.py  example_models.py  example_recipie_json.py  test_api_responses.py  test_config.py  test_policies.py  test_request_decompression.py  test_responses_stream.py  test_routing.py  test_scheduling.py  test_trace.py
